crates/oxidoc/tests/snapshots/golden_writer__mediawiki__common__inline-code.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
a <code>let x = 1;</code> b
