crates/oxidoc/tests/snapshots/golden_writer__mediawiki__common__line-block.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
first line<br />
second line
