crates/oxidoc/tests/snapshots/golden_writer__mediawiki__common__link-empty-label.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
before [http://example.com ] after
