crates/oxidoc/tests/snapshots/golden_writer__mediawiki__common__link-in-link.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
[[u1|outer [[u2|inner]] end]]
