crates/oxidoc/tests/snapshots/golden_writer__mediawiki__common__link-label-wrap.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
Padding padding padding padding [http://example.com/path a multi word link label here] and trailing words to push wrapping.
