crates/oxidoc/tests/snapshots/golden_writer__mediawiki__common__link-url-specials.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
[http://example.com/a%20b#frag x]
