crates/oxidoc/tests/snapshots/golden_writer__mediawiki__common__nested-emphasis.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
''emph with '''strong''' inside'' end
