crates/oxidoc/tests/snapshots/golden_writer__mediawiki__common__ordered-example.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
<ol style="list-style-type: example;">
<li>first</li>
<li>second</li></ol>
