crates/oxidoc/tests/snapshots/golden_writer__mediawiki__common__ordered-lower-roman.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
<ol style="list-style-type: lower-roman;">
<li>one</li>
<li>two</li></ol>
