crates/oxidoc/tests/snapshots/golden_writer__mediawiki__common__ordered-nested.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
# outer
## inner one
## inner two
